--- a/all_static/css/reference.css
+++ b/all_static/css/reference.css
@@ -55,3 +55,15 @@ code {
 [tooltip]:not([tooltip-persistent]):before {
     pointer-events: none;
 }
+
+.four.columns ul{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.four.columns ul li{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+    
+}
