--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -47,28 +47,28 @@
     <li class="inl-blk"><a href="#layout-yaxis-tickmode">Ticks</a></li><li class="inl-blk">&nbsp;|</li>
     <li class="inl-blk"><a href="#layout-yaxis-range">Range</a></li>
     <br>
-    <li><b><a href="#layout-scene">3d Scene:</a></b></li> 
-  	<li><a href="#layout-scene-camera">Camera</a></li><li class="inl-blk">&nbsp;|</li>
-  	<li><a href="#layout-scene-aspectmode">Aspect Ratio</a></li>
+    <li class="inl-blk"><b><a href="#layout-scene">3d Scene:</a></b></li> 
+  	<li class="inl-blk"><a href="#layout-scene-camera">Camera</a></li><li class="inl-blk">&nbsp;|</li>
+  	<li class="inl-blk"><a href="#layout-scene-aspectmode">Aspect Ratio</a></li>
   	<br>
   	<li class="inl-blk"><b>3D Axes:</b></li>
-    <li><a href="#layout-scene-xaxis">X</a></li><li class="inl-blk">&nbsp;|</li>
-    <li><a href="#layout-scene-yaxis">Y</a></li><li class="inl-blk">&nbsp;|</li>
-    <li><a href="#layout-scene-zaxis">Z</a></li><li class="inl-blk">
+    <li class="inl-blk"><a href="#layout-scene-xaxis">X</a></li><li class="inl-blk">&nbsp;|</li>
+    <li class="inl-blk"><a href="#layout-scene-yaxis">Y</a></li><li class="inl-blk">&nbsp;|</li>
+    <li class="inl-blk"><a href="#layout-scene-zaxis">Z</a></li><li class="inl-blk">
     <br>
-  	<li><b><a href="#layout-geo">Geo:</a></b></li> 
-  	<li><a href="#layout-geo-projection">Projection</a></li><li class="inl-blk">&nbsp;|</li>
-  	<li><a href="#layout-geo-projection">Resolution</a></li><li class="inl-blk">&nbsp;|</li>
-  	<li><a href="#layout-geo-projection">Scope</a></li>
+  	<li class="inl-blk"><b><a href="#layout-geo">Geo:</a></b></li> 
+  	<li class="inl-blk"><a href="#layout-geo-projection">Projection</a></li><li class="inl-blk">&nbsp;|</li>
+  	<li class="inl-blk"><a href="#layout-geo-projection">Resolution</a></li><li class="inl-blk">&nbsp;|</li>
+  	<li class="inl-blk"><a href="#layout-geo-projection">Scope</a></li>
   	<br>
-  	<li><b>Geo Axes:</b></li>
-    <li><a href="#layout-geo-lonaxis">Longitude</a></li><li class="inl-blk">&nbsp;|</li>
-    <li><a href="#layout-geo-lataxis">Latitude</a></li>
+  	<li class="inl-blk"><b>Geo Axes:</b></li>
+    <li class="inl-blk"><a href="#layout-geo-lonaxis">Longitude</a></li><li class="inl-blk">&nbsp;|</li>
+    <li class="inl-blk"><a href="#layout-geo-lataxis">Latitude</a></li>
     <br>
     <br>
-  	<li><a href="#layout-legend">Legend</a></li><li class="inl-blk">&nbsp;|</li>
-  	<li><a href="#layout-annotations">Annotations</a></li><li class="inl-blk">&nbsp;|</li>
-  	<li><a href="#layout-shapes">Shapes</a></li> 
+  	<li class="inl-blk"><a href="#layout-legend">Legend</a></li><li class="inl-blk">&nbsp;|</li>
+  	<li class="inl-blk"><a href="#layout-annotations">Annotations</a></li><li class="inl-blk">&nbsp;|</li>
+  	<li class="inl-blk"><a href="#layout-shapes">Shapes</a></li> 
   	</ul>  
   </ul>
 </div>
