--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -54,7 +54,7 @@
   	<li class="inl-blk"><b>3D Axes:</b></li>
     <li class="inl-blk"><a href="#layout-scene-xaxis">X</a></li><li class="inl-blk">&nbsp;|</li>
     <li class="inl-blk"><a href="#layout-scene-yaxis">Y</a></li><li class="inl-blk">&nbsp;|</li>
-    <li class="inl-blk"><a href="#layout-scene-zaxis">Z</a></li><li class="inl-blk">
+    <li class="inl-blk"><a href="#layout-scene-zaxis">Z</a></li>
     <br>
   	<li class="inl-blk"><b><a href="#layout-geo">Geo:</a></b></li> 
   	<li class="inl-blk"><a href="#layout-geo-projection">Projection</a></li><li class="inl-blk">&nbsp;|</li>
