--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1073,6 +1073,10 @@ FLOATING REFERENCE NAV
   color: #444;
 }
 
+.underline{
+  text-decoration: underline !important;
+}
+
 .scrollspy-highlight{
     background: #00a8e6 !important;
     padding: 4px;
