minor fixes in 'REQUEST DEMO' button

--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -396,7 +396,7 @@ BUTTONS
 .\--enterprise-quaternary {
     background: None;
     border: 1px solid #45A9FF;
-    color: #9ddcff;
+    color: #447bdc;
 }
 
 .button a{
