WIP on new template for API docs

--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -232,7 +232,7 @@ there.
   overflow-y: auto;
   height: 100%;
   margin-left: 40px;
-  margin-top: 0;
+  margin-top: 20px;
 }
 
 .js-splash--navigation-inline {
