--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -1,30 +1,136 @@
 <!DOCTYPE html>
 <html>
-	{% include head.html %}
-	<body>
-		<div class="allcontent">
-			{% include header.html %}
+<head>
+<!-- Media query magic: http://stackoverflow.com/questions/19945658/my-iphone-thinks-its-980px-wide -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-			{% include ad-text.html %}
+<!-- Icon -->
+<link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
 
-			{% include navigation-bar.html %}
+<!-- META TAGS -->
+{% include analytics.html %}
+{% include seo.html %}
 
-			<div class="sectionseparator_bg">
-				{% if page.page_type == 'reference' %}
-					{% include reference-side-nav.html %}
-				{% endif %}
-				<div class="container" {% if page.page_type == 'reference' %}style="margin-left:280px;"{% endif %}>
-					{{ content }}
-				</div>
-			</div>
+
+<!-- Font -->
+<link rel="stylesheet" type="text/css" href="{{ site.staticurl }}/fonts/font-awesome/css/font-awesome.min.css" />
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/layout_block.css"/>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/modules.css"/>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/state.css"/>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/base.css"/>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash.css"/>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash-highlight.css"/>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/plotly_icons.css"/>
+<script src="//cdn.plot.ly/plotly-latest.min.js"></script>
+</head>
+<body>
+
+<div id="header" style="
+  background-image: url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  background-position: center top;
+  width: 100%;
+  height: 350px;
+  position: relative;
+  ">
+
+	{% include header.html %}
+  <div style="
+    background-image: linear-gradient(0deg, rgba(100,91,158, 0.89)  0%, rgba(58,124,187, 0.89) 100%);
+    width: 100%;
+    height: 100%;
+  "></div>
+  
+    <!-- Lang Banner -->
+    {% include lang-splash-banner.html %}
+
+    <!-- sitemap -->
+    {% include navigation-bar.html %}
+
+
+<div style="position: relative;">
+	<div id="sidebar" class="js-splash--navigation-sidebar">
+		<div class="js-splash--navigation-section-title">Quick Start</div>
+		<div class="js-splash--navigation-item-container">
+			{% if page.language == "plotly_js" %}
+			<a href="https://plot.l/javascript/getting-started" class="js-splash--navigation-item">Getting Started</a>
+			<a href="https://cdn.plot.ly/plotly-latest.min.js" class="js-splash--navigation-item">CDN</a>
+			<a download target=href="https://cdn.plot.ly/plotly-latest.min.js" class="js-splash--navigation-item">Download</a>
+			{% else %}
+			<a href="https://plot.l/{{ page.language }}/getting-started" class="js-splash--navigation-item">Getting Started</a>
+			{% endif %}
+      
 		</div>
-    {% include footer.html %}
-    
-    {% if page.page_type == 'reference' %}
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.24.0/js/uikit.min.js"></script>
-    {% endif %}
-    
-    </body>
 
+		<div class="js-splash--navigation-section-title">Reference</div>
+		<div class="js-splash--navigation-item-container">
+			<a href="https://plot.ly/javascript/reference" class="js-splash--navigation-item">Chart Attributes</a>
+			<a href="https://plot.ly/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Function Reference</a>
+		</div>
+
+		<div class="js-splash--navigation-section-title">Examples</div>
+		<div class="js-splash--navigation-item-container">
+        {
+			<a href="#basic-charts" class="js-splash--navigation-item">Basic</a>
+        
+		
+      <a href="#statistical-charts" class="js-splash--navigation-item">Statistical</a>
+      <a href="#scientific-charts" class="js-splash--navigation-item">Scientific</a>
+      <a href="#financial-charts" class="js-splash--navigation-item">Financial</a>
+      <a href="#3d-charts" class="js-splash--navigation-item">3D</a>
+			<a href="#maps" class="js-splash--navigation-item">Maps</a>
+			<a href="#chart-events" class="js-splash--navigation-item">Events and Controls</a>
+			<a href="#layout-options" class="js-splash--navigation-item">Layout Options</a>
+		</div>
+
+		<div class="js-splash--navigation-section-title">Community</div>
+		<div class="js-splash--navigation-item-container">
+			<a target="_blank" href="https://github.com/plotly/plotly.js/blob/master/CONTRIBUTING.md" class="js-splash--navigation-item">Contributing</a>
+		  <a target="_blank" href="https://github.com/plotly/plotly.js/" class="js-splash--navigation-item">GitHub</a>
+      <a target="_blank" href="http://community.plot.ly/c/plotly-js" class="js-splash--navigation-item">community.plot.ly</a>
+		</div>
+
+		<div class="js-splash--navigation-section-title">Tools</div>
+		<div class="js-splash--navigation-item-container">
+			<a target="_blank" href="https://plot.ly/plot" class="js-splash--navigation-item">Web Editor</a>
+			<a target="_blank" href="https://codepen.io/plotly" class="js-splash--navigation-item">CodePen</a>
+		</div>
+	</div>
+</div>
+
+<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript">
+<!-- pin the sidebar to the top -->
+$(function() {
+    var $sidebar   = $("#sidebar"),
+        $window    = $(window),
+        $header    = $("#header");
+    function setHeight() {
+      $sidebar.css({top: Math.max(50,
+                (($header.height() + 50) - // 50: margin-top of the first header
+                $window.scrollTop()))});
+    }
+    setHeight();
+    $window.scroll(setHeight);
+});
+</script>
+
+<div class="js-splash--container">
+ {% if page.page_type == 'reference' %}style="margin-left:280px;"{% endif %}
+					{{ content }}
+</div>
+
+{% if page.language == "plotly_js" %}
+<div class="sponsor">Distribution powered by</div>
+<a target="_blank" href="https://www.fastly.com/"><img src="https://www.fastly.com/sites/default/files/fastly_logo.png" alt="Fastly"></a>
+{% endif %}
+{% include footer.html %}
+
+</body>
 </html>
