--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -47,42 +47,46 @@
 	<div class="js-splash--navigation-section-title">Quick Start</div>
 	<div class="js-splash--navigation-item-container">
 		{% if page.language == "plotly_js" %}
-		  <a href="https://plot.l/javascript/getting-started" class="js-splash--navigation-item">Getting Started</a>
+		  <a href="{{ BASE_URL }}/javascript/getting-started" class="js-splash--navigation-item">Getting Started</a>
 		  <a href="https://cdn.plot.ly/plotly-latest.min.js" class="js-splash--navigation-item">CDN</a>
 		  <a download target=href="https://cdn.plot.ly/plotly-latest.min.js" class="js-splash--navigation-item">Download</a>
-		  <a href="https://plot.ly/javascript/reference" class="js-splash--navigation-item">Chart Attributes</a>
-		  <a href="https://plot.ly/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Function Reference</a>
+		  <a href="{{ BASE_URL }}/javascript/reference" class="js-splash--navigation-item">Chart Attributes</a>
+		  <a href="{{ BASE_URL }}/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Function Reference</a>
 		{% else %}
-		  <a href="https://plot.ly/{{ page.language }}/getting-started" class="js-splash--navigation-item">Getting Started</a>
+		  <a href="{{ BASE_URL }}/{{ page.language }}/getting-started" class="js-splash--navigation-item">Getting Started</a>
 		{% endif %}
         
         <!-- Reference Pages -->
         {% if page.language == "r" or page.language == "python" or page.language == "matlab" %}
-		<a href="https://plot.ly/{{ page.language }}/reference" class="js-splash--navigation-item">Chart Attributes</a>
+		<a href="{{ BASE_URL }}/{{ page.language }}/reference" class="js-splash--navigation-item">Chart Attributes</a>
 		{% endif %}
 
 		<!-- User Guides -->
-		{% if page.language == "r" or page.language == "ggplot2" or page.language == "matlab "%}
-		  <a href="https://plot.ly/{{ page.language }}/user-guide/" class="js-splash--navigation-item">User Guide</a>
+		{% if page.language == "r" or page.language == "ggplot2" or page.language == "matlab" %}
+		  <a href="{{ BASE_URL }}/{{ page.language }}/user-guide/" class="js-splash--navigation-item">User Guide</a>
+		{% endif %}
+
+		{% if page.language == "matplotlib" %}
+		  <a href="{{ BASE_URL }}/python/matplotlib-to-plotly-tutorial/" class="js-splash--navigation-item">User Guide</a>
 		{% endif %}
 
 
         <!-- Shiny Tutorial -->
 		{% if page.language == "r"%}
-		  <a href="https://plot.ly/{{ page.language }}/shiny-tutorial/" class="js-splash--navigation-item">Shiny Tutorial</a>
+		  <a href="{{ BASE_URL }}/{{ page.language }}/shiny-tutorial/" class="js-splash--navigation-item">Shiny Tutorial</a>
 		{% endif %}
 
         <!-- Python Specific -->
         {% if page.language == "python" %}
-          <a href="https://plot.ly/i/python/offline/" class="js-splash--navigation-item">Use Offline</a>
-          <a href="https://plot.ly/ipython-notebooks/" class="js-splash--navigation-item">IPython</a>
-          <a href="https://plot.ly/pandas/" class="js-splash--navigation-item">Pandas</a>
+          <a href="{{ BASE_URL }}/i/python/offline/" class="js-splash--navigation-item">Use Offline</a>
+          <a href="{{ BASE_URL }}/ipython-notebooks/" class="js-splash--navigation-item">IPython</a>
+          <a href="{{ BASE_URL }}/pandas/" class="js-splash--navigation-item">Pandas</a>
         {% endif %}
         
         <!-- Pandas Specific -->
         {% if page.language == "pandas" %}
-          <a href="https://plot.ly/ipython-notebooks/cufflinks/" class="js-splash--navigation-item">Cufflinks User Guide</a>
-          <a href="https://plot.ly/python/ipython-notebooks/" class="js-splash--navigation-item">Ipython Notebooks</a>
+          <a href="{{ BASE_URL }}/ipython-notebooks/cufflinks/" class="js-splash--navigation-item">Cufflinks User Guide</a>
+          <a href="{{ BASE_URL }}/python/ipython-notebooks/" class="js-splash--navigation-item">Ipython Notebooks</a>
 		{% endif %}
         
   
@@ -110,6 +114,6 @@
 
 	<div class="js-splash--navigation-section-title">Tools</div>
 		<div class="js-splash--navigation-item-container">
-			<a target="_blank" href="https://plot.ly/plot" class="js-splash--navigation-item">Web Editor</a>
+			<a target="_blank" href="{{ BASE_URL }}/plot" class="js-splash--navigation-item">Web Editor</a>
 			<a target="_blank" href="https://codepen.io/plotly" class="js-splash--navigation-item">CodePen</a>
 		</div>
