--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -50,7 +50,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 300;
-  font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
 
 .js-splash--code-block {
@@ -115,14 +115,14 @@ code {
 }
 
 .js-splash--navigation-item {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   color: #616161;
-  line-height: 16px;
-  height: 16px;
+  line-height: 12px;
+  height: 12px;
   padding-left: 10px;
   border-left: 1px solid #CED6FF;
-  margin-top: 9px;
-  margin-bottom: 9px;
+  margin-top: 8px;
+  margin-bottom: 8px;
   cursor: pointer;
   display: block;
 }
