--- a/_includes/plotly_offline_cta.html
+++ b/_includes/plotly_offline_cta.html
@@ -2,6 +2,7 @@
     background-image: url('http://images.plot.ly/background-images/grey-chart-background.png');
     height: 200px;
     font-family: 'Open sans',verdana,arial,sans-serif;
+    z-index: -99;
     position: relative;">
 
 <h2 style="
