--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -16,6 +16,10 @@
   display: none;
 }
 
+h1, h2, h3, h4, h5. h6{
+  font-family: ;'Open sans',verdana,arial,sans-serif
+}
+
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
