Removed sidebar from open source announcement, added new template on examples page, and some minor fixes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,11 @@
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/fonts/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/plotly_icons.css" />
         <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
+        <script>hljs.initHighlightingOnLoad();</script>
+        <script src="//cdn.plot.ly/plotly-latest.min.js"></script>
 
     	<!-- Stylesheets -->
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
@@ -17,7 +21,11 @@
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
+        <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash.css"/>
+        <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash-highlight.css"/>
+        <link rel="stylesheet" href="{{ site.staticurl }}/css/plotly_icons.css"/>
 
+        
         {% if page.page_type == "ipython" %}
         <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython_notebook.css">
         {% else %}
