--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -10,6 +10,10 @@
     {% assign language = "matlab" %}
 {% elsif page.url contains "matplotlib" %}
     {% assign language = "matplotlib" %}
+{% elsif page.url contains "julia" %}
+    {% assign language = "julia" %}
+{% elsif page.url contains "nodejs" %}
+    {% assign language = "nodejs" %}
 {% endif %}
 
 
@@ -25,8 +29,8 @@
 		{% assign chart_events = true %}
 	{% elsif page.display_as == "3d_charts" %}
 		{% assign 3d_charts = true %}
-	{% elsif page.display_as == "financial_analysis" %}
-		{% assign financial_analysis = true %}
+	{% elsif page.display_as == "financial_analysis" or page.display_as == "financial" %}
+		{% assign financial = true %}
 	{% elsif page.display_as == "multiple_axes" %}
 		{% assign multiple_axes = true %}
     {% elsif page.display_as == "fitting_tools" %}
@@ -35,8 +39,6 @@
 		{% assign scientific = true %}
 	{% elsif page.display_as == "statistical" %}
 		{% assign statistical = true %}
-	{% elsif page.display_as == "financial" %}
-		{% assign financial = true %}
 	{% elsif page.display_as == "layout_opt" %}
 		{% assign layout_opt = true %}
 	{% endif %}
@@ -98,9 +100,9 @@
 	{% if statistical == true %}<a href="#statistical-charts" class="js-splash--navigation-item">Statistical</a>{% endif %}
 	{% if scientific == true %}<a href="#scientific-charts" class="js-splash--navigation-item">Scientific</a>{% endif %}
 	{% if financial == true %}<a href="#financial-charts" class="js-splash--navigation-item">Financial</a>{% endif %}
-	{% if 3d_charts == true %}<a href="#3d-charts" class="js-splash--navigation-item">3D</a>{% endif %}
-	{% if fitting_tools == true %}<a href="#3d-charts" class="js-splash--navigation-item">Fitting Tools</a>{% endif %}
 	{% if maps == true %}<a href="#maps" class="js-splash--navigation-item">Maps</a>{% endif %}
+	{% if 3d_charts == true %}<a href="#3d-charts" class="js-splash--navigation-item">3D</a>{% endif %}
+	{% if fitting_tools == true %}<a href="#fitting-tools" class="js-splash--navigation-item">Fitting Tools</a>{% endif %}
 	{% if chart_events == true %}<a href="#chart-events" class="js-splash--navigation-item">Events and Controls</a>{% endif %}
 	{% if layout_opt == true %}<a href="#layout-options" class="js-splash--navigation-item">Layout Options</a> {% endif %}
 	</div>
@@ -117,3 +119,5 @@
 			<a target="_blank" href="{{ BASE_URL }}/plot" class="js-splash--navigation-item">Web Editor</a>
 			<a target="_blank" href="https://codepen.io/plotly" class="js-splash--navigation-item">CodePen</a>
 		</div>
+
+</div>
