--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -4,8 +4,8 @@
     	<div style="background-color: rgba(255,255,255,0.8); height: 100%; text-align: center;">
             <div style="text-align: center;position: relative; padding-top: 5px;">
                 <div style="padding-top: 30px;">
-                  <h6 style="color:white;">Plotly for {{ page.language | capitalize }} is now entirely open source, free, and self-hosted</h6>
-                  <h6 style="color:white;" style="text-align: center;">
+                  <h6>Plotly for {{ page.language | capitalize }} is now entirely open source, free, and self-hosted</h6>
+                  <h6 style="text-align: center;">
                     Learn more about <a href="https://plot.ly/javascript/open-source-announcement">why we've open sourced</a>
                   </h6>
                 </div>
