--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,13 +14,21 @@
 
       <a class="button --enterprise-quaternary" href="/settings" id="signup" target="_self">SIGN UP</a>
       
-      <a class="button" href="/2/~bar-chart-excel/?plot_type=Bar%20chart">
-        &plus; NEW PROJECT
-      </a>
-
-      <a class="button" href="https://plot.ly/products/cloud/">
-        UPGRADE
-      </a>
+      {% if page.type == 'example_index' %}
+        <a class="button" style="color:#69738a;" href="/2/~bar-chart-excel/?plot_type=Bar%20chart">
+          &plus; NEW PROJECT
+        </a>
+        <a class="button" style="color:#69738a;" href="https://plot.ly/products/cloud/">
+          UPGRADE
+        </a>
+      {% else %}
+        <a class="button" href="/2/~bar-chart-excel/?plot_type=Bar%20chart">
+          &plus; NEW PROJECT
+        </a>
+        <a class="button" href="https://plot.ly/products/cloud/">
+          UPGRADE
+        </a>
+      {% endif %}
       
       <a href="https://plotly.typeform.com/to/seG7Vb" class="typeform-share button --enterprise-quaternary" data-mode="1" target="_blank" onclick="window.mixpanel.track('Typeform demo request');">REQUEST DEMO</a>
       <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()
