Fixed sidebar to only show those examples, which are present

--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-{% elsif page.language == "plotly_js" %}
+{% if page.language == "plotly_js" %}
 
   <div style="
       	background-image: url({{site.staticurl}}/images/plotlyjs-background-1.png);
