--- a/_includes/lang-splash-banner.html
+++ b/_includes/lang-splash-banner.html
@@ -20,17 +20,18 @@
           <h6 style="font-size:30px; color: rgb(255,255,255);">Plotly for {{ page.language | capitalize }} is now entirely open source, free, and self-hosted</h6>
           <h5 style="font-size:30px; color: rgb(255,255,255);" style="text-align: center;">
             Learn more about <a style="color: #ABB9D2;" href="https://plot.ly/javascript/open-source-announcement">why we've open sourced</a>
-          </h6>
+          </h5>
         </div>
     {% endif %}
     
-
     </div>
+    
     <br />
+    <div style="display:table; margin:0 auto;">
     {% if page.language == "plotly_js" %}
-       <iframe src="https://ghbtns.com/github-btn.html?user=ropensci&repo=plotly&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-    {% elsif page.language == "ggplot2" %}
        <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.js&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+    {% elsif page.language == "ggplot2" %}
+       <iframe src="https://ghbtns.com/github-btn.html?user=ropensci&repo=plotly&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
     {% elsif page.language == "matlab" %}
        <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=matlab-api&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
     {% elsif page.language == "matplotlib" %}
@@ -38,8 +39,7 @@
     {% elsif page.language == "python" %}
        <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.py&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
     {% endif %}
-
-
+    </div>
 
 
   </div>
