--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -3,7 +3,7 @@
 {% elsif page.url contains "javascript" %}
     {% assign language = "plotly_js" %}  
 {% elsif page.url contains "ggplot2" %}
-    {% assign language = "ggplot2" %}    
+    {% assign language = "ggplot2" %}
 {% elsif page.url contains "r" %}
     {% assign language = "r" %}    
 {% elsif page.url contains "matlab" %}
@@ -18,7 +18,7 @@
 
 
 
-{% for page in site.posts | where "language", language | where "has_thumbnail", true %}
+{% for page in site.posts | where:"language", language | where:"has_thumbnail", true %}
     {% if page.display_as == "chart_type" or page.display_as == "basic" %}
 		{% assign basic = true %}
 	{% elsif page.display_as == "advanced_charts"%}
@@ -41,6 +41,12 @@
 		{% assign statistical = true %}
 	{% elsif page.display_as == "layout_opt" %}
 		{% assign layout_opt = true %}
+	{% elsif page.display_as == "file_settings" %}
+		{% assign file_settings = true %}
+	{% elsif page.display_as == "tutorial" %}
+		{% assign tutorial = true %}
+	{% elsif page.display_as == "get_request" %}
+		{% assign get_request = true %}
 	{% endif %}
 {% endfor %}
 
@@ -105,19 +111,45 @@
 	{% if fitting_tools == true %}<a href="#fitting-tools" class="js-splash--navigation-item">Fitting Tools</a>{% endif %}
 	{% if chart_events == true %}<a href="#chart-events" class="js-splash--navigation-item">Events and Controls</a>{% endif %}
 	{% if layout_opt == true %}<a href="#layout-options" class="js-splash--navigation-item">Layout Options</a> {% endif %}
+	{% if file_settings == true %}<a href="#layout-options" class="js-splash--navigation-item">File Settings</a> {% endif %}
+	{% if tutorial == true %}<a href="#layout-options" class="js-splash--navigation-item">Tutorial</a> {% endif %}
+	{% if get_request == true %}<a href="#layout-options" class="js-splash--navigation-item">Image Export & Retrieving Plots</a> {% endif %}
 	</div>
 
 	<div class="js-splash--navigation-section-title">Community</div>
 			<div class="js-splash--navigation-item-container">
+			  {% if language == "plotly_js" %}
 				<a target="_blank" href="https://github.com/plotly/plotly.js/blob/master/CONTRIBUTING.md" class="js-splash--navigation-item">Contributing</a>
+			  {% endif %}
+              
+              {% if page.permalink == '/ipython-notebooks/' %}             			  
+			  <a target="_blank" href="https://github.com/plotly/IPython-plotly" class="js-splash--navigation-item">GitHub</a>
+			  {% elsif page.language == 'python' or page.language == 'pandas' %}
+			  <a target="_blank" href="https://github.com/plotly/plotly.py" class="js-splash--navigation-item">GitHub</a>
+			  {% elsif page.language == 'matlab' or page.language == 'matplotlib' %}
+			  <a target="_blank" href="https://github.com/plotly/matlab-api" class="js-splash--navigation-item">GitHub</a>
+			  {% elsif page.language == 'julia' %}
+			  <a target="_blank" href="https://github.com/plotly/Julia-API" class="js-splash--navigation-item">GitHub</a>
+			  {% elsif page.language == 'nodejs' %}
+			  <a target="_blank" href="https://github.com/plotly/plotly-nodejs" class="js-splash--navigation-item">GitHub</a>
+			  {% elsif page.language == 'r' or page.language == 'ggplot2' %}
+			  <a target="_blank" href="https://github.com/ropensci/plotly" class="js-splash--navigation-item">GitHub</a>
+			  {% elsif page.language == 'plotly_js' %}
 			  <a target="_blank" href="https://github.com/plotly/plotly.js/" class="js-splash--navigation-item">GitHub</a>
-	      <a target="_blank" href="http://community.plot.ly/c/plotly-js" class="js-splash--navigation-item">community.plot.ly</a>
+              {% else %}
+              <a target="_blank" href="https://github.com/plotly/" class="js-splash--navigation-item">GitHub</a>
+              {% endif %}
+
+	          <a target="_blank" href="http://community.plot.ly/" class="js-splash--navigation-item">community.plot.ly</a>
+
 			</div>
 
 	<div class="js-splash--navigation-section-title">Tools</div>
 		<div class="js-splash--navigation-item-container">
 			<a target="_blank" href="{{ BASE_URL }}/plot" class="js-splash--navigation-item">Web Editor</a>
+			{% if language == "plotly_js" %}
 			<a target="_blank" href="https://codepen.io/plotly" class="js-splash--navigation-item">CodePen</a>
+			{% endif %}
 		</div>
 
 </div>
