Fixed dashboards page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,15 +16,13 @@
         <script src="//cdn.plot.ly/plotly-latest.min.js"></script>
 
     	<!-- Stylesheets -->
+        <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash-highlight.css"/>
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
     	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
         <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash.css"/>
-        <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash-highlight.css"/>
-        <link rel="stylesheet" href="{{ site.staticurl }}/css/plotly_icons.css"/>
-
         
         {% if page.page_type == "ipython" %}
         <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython_notebook.css">
@@ -42,6 +40,6 @@
     	{% include seo.html %}
 
     	<!-- code highlighting -->
-    	<link rel="stylesheet" href="{{site.staticurl}}/javascripts/codehighlight/styles/tomorrow.css">
+    	<!--<link rel="stylesheet" href="{{site.staticurl}}/javascripts/codehighlight/styles/tomorrow.css">-->
         {% include analytics.html %}
 	</head>
