--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -1,11 +1,11 @@
-{% if page.url contains "python" %}
+{% if page.url contains "dashboards" %}
+    {% assign dashboards = true %}
+{% elsif page.url contains "python" %}
     {% assign language = "python" %}
 {% elsif page.url contains "javascript" %}
     {% assign language = "plotly_js" %}  
 {% elsif page.url contains "ggplot2" %}
     {% assign language = "ggplot2" %}
-{% elsif page.url contains "r" %}
-    {% assign language = "r" %}    
 {% elsif page.url contains "matlab" %}
     {% assign language = "matlab" %}
 {% elsif page.url contains "matplotlib" %}
@@ -14,11 +14,13 @@
     {% assign language = "julia" %}
 {% elsif page.url contains "nodejs" %}
     {% assign language = "nodejs" %}
+{% elsif page.url contains "r" %}
+    {% assign language = "r" %}    
 {% endif %}
 
+{% assign pages_list = site.posts | where:"language", language %}
 
-
-{% for page in site.posts | where:"language", language | where:"has_thumbnail", true %}
+{% for page in pages_list %}
     {% if page.display_as == "chart_type" or page.display_as == "basic" %}
 		{% assign basic = true %}
 	{% elsif page.display_as == "advanced_charts"%}
@@ -51,7 +53,7 @@
 {% endfor %}
 
 <div style="position: relative;">
-<div id="sidebar" class="js-splash--navigation-sidebar">
+  <div id="sidebar" class="js-splash--navigation-sidebar">
 	<div class="js-splash--navigation-section-title">Quick Start</div>
 	<div class="js-splash--navigation-item-container">
 		{% if page.language == "plotly_js" %}
@@ -114,6 +116,13 @@
 	{% if file_settings == true %}<a href="#layout-options" class="js-splash--navigation-item">File Settings</a> {% endif %}
 	{% if tutorial == true %}<a href="#layout-options" class="js-splash--navigation-item">Tutorial</a> {% endif %}
 	{% if get_request == true %}<a href="#layout-options" class="js-splash--navigation-item">Image Export & Retrieving Plots</a> {% endif %}
+
+	{% if dashboards %}
+	<!--override for dashboards index page -->
+	<a href="#industry" class="js-splash--navigation-item">By Industry</a>
+	<a href="#language" class="js-splash--navigation-item">By Data Science Language</a>
+	{% endif %}
+
 	</div>
 
 	<div class="js-splash--navigation-section-title">Community</div>
@@ -152,4 +161,5 @@
 			{% endif %}
 		</div>
 
+  </div>
 </div>
