--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	{% include head.html %}
-	<body><div id="header" style="
+<body>
+<div id="header" style="
   background-image: url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
   background-repeat: no-repeat;
   background-size: cover;
@@ -22,11 +23,11 @@
     <!-- Lang Banner -->
     {% include lang-splash-banner.html %}
 
+</div>
+
     <!-- sitemap -->
     {% include navigation-bar.html %}
-		
-	
-</div>
+
 	<div class="allcontent">
 		
 
