--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -23,15 +23,21 @@
   
     <!-- Lang Banner -->
     {% include lang-splash-banner.html %}
+</div> 
+<!-- </banner> -->
 
     <!-- sitemap -->
     {% include navigation-bar.html %}
 
     <!-- sidebar -->
+    {% if page.no_sidebar %}
+    <!-- If this tag is set to true in the page, it will not apply sidebar -->
+    {% else %}
     {% include side-bar.html %}
+    {% endif %}
 		
 	
-</div>
+
 
 <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript">
