--- a/all_static/css/api_docs.css
+++ b/all_static/css/api_docs.css
@@ -23,10 +23,11 @@ code {
 pre, blockquote {
     margin-bottom: 0;}
 
-iframe{
+/*iframe{
 	width: 100%;
 	border: 0px;
 }
+*/
 
 .border{
 	border: 0px;
