--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -14,7 +14,9 @@
     {% assign language = "julia" %}
 {% elsif page.url contains "nodejs" %}
     {% assign language = "nodejs" %}
-{% elsif page.url contains "r" %}
+{% elsif page.url contains "pandas" %}
+    {% assign language = "pandas" %}
+{% elsif page.url contains "r/" %}
     {% assign language = "r" %}    
 {% endif %}
 
@@ -63,7 +65,9 @@
 		  <a href="{{ BASE_URL }}/javascript/reference" class="js-splash--navigation-item">Chart Attributes</a>
 		  <a href="{{ BASE_URL }}/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Function Reference</a>
 		{% else %}
-		  <a href="{{ BASE_URL }}/{{ page.language }}/getting-started" class="js-splash--navigation-item">Getting Started</a>
+		  {% unless dashboards %} <!-- dashboards do not have getting started page -->
+		    <a href="{{ BASE_URL }}/{{ page.language }}/getting-started" class="js-splash--navigation-item">Getting Started</a>
+		  {% endunless %}
 		{% endif %}
         
         <!-- Reference Pages -->
@@ -110,12 +114,15 @@
 	{% if financial == true %}<a href="#financial-charts" class="js-splash--navigation-item">Financial</a>{% endif %}
 	{% if maps == true %}<a href="#maps" class="js-splash--navigation-item">Maps</a>{% endif %}
 	{% if 3d_charts == true %}<a href="#3d-charts" class="js-splash--navigation-item">3D</a>{% endif %}
+	{% if language == "matlab" or language == "python" %}
+	  <a href="#streaming" class="js-splash--navigation-item">Streaming</a>
+	{% endif %}
 	{% if fitting_tools == true %}<a href="#fitting-tools" class="js-splash--navigation-item">Fitting Tools</a>{% endif %}
 	{% if chart_events == true %}<a href="#chart-events" class="js-splash--navigation-item">Events and Controls</a>{% endif %}
 	{% if layout_opt == true %}<a href="#layout-options" class="js-splash--navigation-item">Layout Options</a> {% endif %}
-	{% if file_settings == true %}<a href="#layout-options" class="js-splash--navigation-item">File Settings</a> {% endif %}
-	{% if tutorial == true %}<a href="#layout-options" class="js-splash--navigation-item">Tutorial</a> {% endif %}
-	{% if get_request == true %}<a href="#layout-options" class="js-splash--navigation-item">Image Export & Retrieving Plots</a> {% endif %}
+	{% if file_settings == true %}<a href="#file-settings" class="js-splash--navigation-item">File Settings</a> {% endif %}
+	{% if tutorial == true %}<a href="#tutorial" class="js-splash--navigation-item">Tutorial</a> {% endif %}
+	{% if get_request == true %}<a href="#get-requests-static-image-export" class="js-splash--navigation-item">Image Export & Retrieving Plots</a> {% endif %}
 
 	{% if dashboards %}
 	<!--override for dashboards index page -->
