Update Javascript index page

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -376,7 +376,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 
 {% if get_request %}
 <hr>
-<h4 class="example-section-title" id="static-image-export"><a class="no_underline plot-blue" href="#get-requests-static-image-export">Image Export & Retrieving Plots</a></h4>
+<h4 class="example-section-title" id="static-image-export"><a class="no_underline plot-blue" href="#static-image-export">Image Export & Retrieving Plots</a></h4>
 <div class="row">
 <div class="six columns">
 <ul>
