--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -92,7 +92,7 @@
 
         <!-- Python Specific -->
         {% if page.language == "python" %}
-          <a href="{{ BASE_URL }}/i/python/offline/" class="js-splash--navigation-item">Use Offline</a>
+          <a href="{{ BASE_URL }}/python/offline/" class="js-splash--navigation-item">Use Offline</a>
           <a href="{{ BASE_URL }}/ipython-notebooks/" class="js-splash--navigation-item">IPython</a>
           <a href="{{ BASE_URL }}/pandas/" class="js-splash--navigation-item">Pandas</a>
         {% endif %}
@@ -122,7 +122,10 @@
 	{% if layout_opt == true %}<a href="#layout-options" class="js-splash--navigation-item">Layout Options</a> {% endif %}
 	{% if file_settings == true %}<a href="#file-settings" class="js-splash--navigation-item">File Settings</a> {% endif %}
 	{% if tutorial == true %}<a href="#tutorial" class="js-splash--navigation-item">Tutorial</a> {% endif %}
-	{% if get_request == true %}<a href="#get-requests-static-image-export" class="js-splash--navigation-item">Image Export & Retrieving Plots</a> {% endif %}
+	{% if get_request == true %}<a href="#static-image-export" class="js-splash--navigation-item">Image Export & Retrieving Plots</a> {% endif %}
+	{% if page.language == 'matlab' or page.language == 'python' or page.language == 'matplotlib' %}
+     <a href="#using-offline" class="js-splash--navigation-item">Use Offline</a>
+    {% endif %}
 
 	{% if dashboards %}
 	<!--override for dashboards index page -->
