Added nav bar in reference pages, minor fixes

--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -1,4 +1,5 @@
-<div id="reference-side-nav">
+<div style="position:relative;">
+<div id="reference-side-bar" >
   <b>PLOT OBJECTS</b>
   <ul class="uk-nav uk-nav-side" data-uk-scrollspy-nav="{closest:'li', cls:'scrollspy-highlight', repeat: true}">
     <li class="inl-blk"><a href="#scatter">Scatter</a></li><li class="inl-blk">&nbsp;|</li>
@@ -71,4 +72,5 @@
   	<li class="inl-blk"><a href="#layout-shapes">Shapes</a></li> 
   	</ul>  
   </ul>
+</div>
 </div>
