--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -93,7 +93,7 @@
         <!-- Python Specific -->
         {% if page.language == "python" %}
           <a href="{{ BASE_URL }}/python/offline/" class="js-splash--navigation-item">Use Offline</a>
-          <a href="{{ BASE_URL }}/ipython-notebooks/" class="js-splash--navigation-item">IPython</a>
+          <a href="{{ BASE_URL }}/ipython-notebooks/" class="js-splash--navigation-item">IPython Notebooks</a>
           <a href="{{ BASE_URL }}/pandas/" class="js-splash--navigation-item">Pandas</a>
         {% endif %}
         
