--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1047,29 +1047,30 @@ SYNTAX HIGHLIGHTER OVERRIDES
 FLOATING REFERENCE NAV
 **********************/
 
-#reference-side-nav{
+#reference-side-bar{
   position: fixed;
   left: 0px;
-  top: 310px;
+  top: 410px;
+  float:left;
   background: whitesmoke;
   padding: 20px;
   height: 100%;
   border: thin solid #ddd;
 }
 
-#reference-side-nav ul{
+#reference-side-bar ul{
   list-style: none;
   list-style-type: none;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
-#reference-side-nav li{
+#reference-side-bar li{
   margin-bottom: 0px !important;
   font-size: 12px;
 }
 
-#reference-side-nav li a{
+#reference-side-bar li a{
   color: #444;
 }
 
