--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -279,40 +279,55 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 
 {% if page.language == "r" %}
 <hr>
-
+<h4 class="example-section-title" id="layout-options">
+<a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h4>
 <div class="row">
-
-<div class="four columns">
-<ul class="no-list-style">
+<div class="six columns">
+<ul >
+{% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "layout_opt" %}
+{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
 <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% assign counter=counter | plus:1 %}
 {% endif %}
 {% endfor %}
 </ul>
 </div>
+</div>
 
-<div class="four columns">
-<ul class="no-list-style">
+<h4 class="example-section-title" id="file-settings">
+<a class="no_underline plot-blue" href="#file-settings">File Settings</a></h4>
+<div class="row">
+<div class="six columns">
+<ul >
+{% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "file_settings" %}
+{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
 <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% assign counter=counter | plus:1 %}
 {% endif %}
 {% endfor %}
 </ul>
 </div>
+</div>
 
-
-<div class="four columns">
-<ul class="no-list-style">
+<h4 class="example-section-title" id="static-image-export">
+<a class="no_underline plot-blue" href="#static-image-export">Image Export & Retrieving Plots</a></h4>
+<div class="row">
+<div class="six columns">
+<ul>
+{% assign counter=0 %}
 {% for page in languagelist %}
 {% if page.display_as == "get_request" %}
+{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
 <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% assign counter=counter | plus:1 %}
 {% endif %}
 {% endfor %}
 </ul>
 </div>
-
 </div>
 
 {% else %}
