Fixed javascript Pages

--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -64,6 +64,7 @@
 		  <a download target=href="https://cdn.plot.ly/plotly-latest.min.js" class="js-splash--navigation-item">Download</a>
 		  <a href="{{ BASE_URL }}/javascript/reference" class="js-splash--navigation-item">Chart Attributes</a>
 		  <a href="{{ BASE_URL }}/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Function Reference</a>
+		  <a href="{{ BASE_URL }}/javascript/configuration-options/" class="js-splash--navigation-item">Configuration Options</a>
 		{% else %}
 		  {% unless dashboards %} <!-- dashboards do not have getting started page -->
 		    <a href="{{ BASE_URL }}/{{ page.language }}/getting-started" class="js-splash--navigation-item">Getting Started</a>
