--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -72,7 +72,7 @@ $(function() {
 });
 </script>
 
-<div class="js-splash--container"
+<div class="js-splash--container {% if page.nosidebar %}no-side-bar{% endif %}"
  {% if page.page_type == 'reference' %}style="margin-left:280px;"{% endif %}>
 					{{ content }}
 </div>
