--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -228,6 +228,10 @@ there.
   margin-right: 100px;
 }
 
+.no-side-bar {
+  margin-left: 10px; /* if no-side-bar, align to left */
+}
+
 .js-splash--navigation-sidebar {
   float: left;
   width: 230px;
