--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,9 @@
 
       <a href="/settings" id="toolsignin" class="headerbar-nav-item --product-header" target="_self">Sign In</a>
 
-      <a class="button --enterprise-quaternary" href="/settings" id="signup" target="_self">SIGN UP</a>
+      <a class="button --enterprise-quaternary" href="/settings" id="signup" target="_self" {% if page.type == 'api_home  %}style="background:#45A9FF;"{% endif %}>
+        SIGN UP
+      </a>
       
       {% if page.type == 'example_index' %}
         <a class="button" style="color:#69738a;" href="/2/~bar-chart-excel/?plot_type=Bar%20chart">
@@ -30,7 +32,7 @@
         </a>
       {% endif %}
       
-      <a href="https://plotly.typeform.com/to/seG7Vb" class="typeform-share button --enterprise-quaternary" data-mode="1" target="_blank" onclick="window.mixpanel.track('Typeform demo request');">REQUEST DEMO</a>
+      <a href="https://plotly.typeform.com/to/seG7Vb" class="typeform-share button --enterprise-quaternary" data-mode="1" target="_blank" onclick="window.mixpanel.track('Typeform demo request');" {% if page.type == 'api_home  %}style="background:#45A9FF;"{% endif %}>REQUEST DEMO</a>
       <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()
       </script>
 
