--- a/_includes/header-white.html
+++ b/_includes/header-white.html
@@ -1,4 +1,4 @@
-<div class="headerbar">
+<div>
 
   <div class="headerbar-leftside">
       <a href="https://plot.ly/feed/" class="logo" target="_blank">
