--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -165,6 +165,8 @@ a {
 a:hover {
   color: #0FA0CE; }
 
+headerbar a:hover {
+  color: white; }
 
 /*
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
