--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -5,6 +5,7 @@
   top: 0;
   background-color: rgba(255, 255, 255, 0);
 }
+
 .logo {
   color: white;
 }
@@ -18,6 +19,28 @@
 
 h1, h2, h3, h4, h5. h6{
   font-family: ;'Open sans',verdana,arial,sans-serif
+}
+
+/* JS splash header for white backgrounds
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.headerbar-white {
+  position: relative !important;
+}
+
+.headerbar-white .logo {
+  color: #69738a;
+}
+
+.headerbar-white .headerbar-nav-item {
+  color: #69738a;
+}
+
+.headerbar-white #signup{
+  background: ;#45A9FF;
+}
+
+.headerbar-white .typeform-share{
+  background: ;#45A9FF;
 }
 
 /* Grid
