--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -9,8 +9,8 @@
 
 	<body>
 		<div class="allcontent">
-			{% include header.html %}
-				{% include ad-text.html %}
+			{% include header-white.html %}
+			{% include ad-text.html %}
 			{% include navigation-bar.html %}
 
 			<div class="sectionseparator_white">
