Added new layout for all the pages, fixed the border issue in iframes

--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -1,5 +1,5 @@
 <div style="position:relative;">
-<div id="reference-side-bar" >
+<div id="reference-side-nav" >
   <b>PLOT OBJECTS</b>
   <ul class="uk-nav uk-nav-side" data-uk-scrollspy-nav="{closest:'li', cls:'scrollspy-highlight', repeat: true}">
     <li class="inl-blk"><a href="#scatter">Scatter</a></li><li class="inl-blk">&nbsp;|</li>
