--- a/all_static/css/api_docs.css
+++ b/all_static/css/api_docs.css
@@ -23,11 +23,15 @@ code {
 pre, blockquote {
     margin-bottom: 0;}
 
-/*iframe{
+iframe#igraph{
 	width: 100%;
 	border: 0px;
 }
-*/
+iframe#auto-examples{
+	width: 100%;
+	border: 0px;
+}
+
 
 .border{
 	border: 0px;
