--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -1047,7 +1047,7 @@ SYNTAX HIGHLIGHTER OVERRIDES
 FLOATING REFERENCE NAV
 **********************/
 
-#reference-side-bar{
+#reference-side-nav{
   position: fixed;
   left: 0px;
   top: 410px;
@@ -1058,19 +1058,19 @@ FLOATING REFERENCE NAV
   border: thin solid #ddd;
 }
 
-#reference-side-bar ul{
+#reference-side-nav ul{
   list-style: none;
   list-style-type: none;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
-#reference-side-bar li{
+#reference-side-nav li{
   margin-bottom: 0px !important;
   font-size: 12px;
 }
 
-#reference-side-bar li a{
+#reference-side-nav li a{
   color: #444;
 }
 
