--- a/all_static/css/userguide_style.css
+++ b/all_static/css/userguide_style.css
@@ -8393,10 +8393,11 @@ div.traceback-wrapper {
     bottom: 0;
     overflow: visible;
 }*/
-
+/*
 div#header {
     display: none;
 }
+*/
 
 #ipython_notebook {
     padding-left: 16px;
