--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -36,11 +36,11 @@ h1, h2, h3, h4, h5. h6{
 }
 
 .headerbar-white #signup{
-  background: ;#45A9FF;
+  background: #45A9FF;
 }
 
 .headerbar-white .typeform-share{
-  background: ;#45A9FF;
+  background: #45A9FF;
 }
 
 /* Grid
