--- a/all_static/css/js-splash.css
+++ b/all_static/css/js-splash.css
@@ -4,6 +4,7 @@
   position: absolute;
   top: 0;
   background-color: rgba(255, 255, 255, 0);
+  z-index: 99;
 }
 
 .logo {
@@ -36,11 +37,21 @@ h1, h2, h3, h4, h5. h6{
 }
 
 .headerbar-white #signup{
-  background: #45A9FF;
+  color: #69738a;
 }
 
 .headerbar-white .typeform-share{
+  color: #69738a;
+}
+
+.headerbar-white #signup:hover{
   background: #45A9FF;
+  color: white;
+}
+
+.headerbar-white .typeform-share:hover{
+  background: #45A9FF;
+  color: white;
 }
 
 /* Grid
