Updated Plot twist (404) page

--- a/_includes/lang-splash-banner.html
+++ b/_includes/lang-splash-banner.html
@@ -13,8 +13,10 @@
   	    </h6>
 
     {% elsif page.language == "plotly_js" %}
-            <h5 style="font-size:30px; color: rgb(255,255,255);">The open source JavaScript graphing library that powers plotly</h6>
-    
+            <h5 style="font-size:30px; color: rgb(255,255,255);">The open source JavaScript graphing library that powers plotly</h5>
+    {% elsif page.title == "Plot Twist" %}
+            <h5 style="font-size:30px; color: rgb(255,255,255);">Plot Twist</h5>
+
     {% else %}
         <div style="padding-top: 30px;">
           <h6 style="font-size:30px; color: rgb(255,255,255);">Plotly for {{ page.language | capitalize }} is now entirely open source, free, and self-hosted</h6>
