Added sidebar in /ipython-notebooks/gallery/ page

--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -1,4 +1,6 @@
-{% if page.url contains "dashboards" %}
+{% if page.url contains "ipython-notebooks/gallery" %}
+    {% assign ipython_notebooks_gallery = true %}
+{% elsif page.url contains "dashboards" %}
     {% assign dashboards = true %}
 {% elsif page.url contains "python" %}
     {% assign language = "python" %}
@@ -67,7 +69,11 @@
 		  <a href="{{ BASE_URL }}/javascript/configuration-options/" class="js-splash--navigation-item">Configuration Options</a>
 		{% else %}
 		  {% unless dashboards %} <!-- dashboards do not have getting started page -->
-		    <a href="{{ BASE_URL }}/{{ page.language }}/getting-started" class="js-splash--navigation-item">Getting Started</a>
+		    {% if ipython_notebooks_gallery %} <!--ipython notebooks gallery and getting started are crazier -->
+		    <a href="{{ BASE_URL }}/ipython-notebooks/" class="js-splash--navigation-item">Getting Started</a>
+		    {% else %}
+		      <a href="{{ BASE_URL }}/{{ page.language }}/getting-started" class="js-splash--navigation-item">Getting Started</a>
+		    {% endif %}
 		  {% endunless %}
 		{% endif %}
 
@@ -94,7 +100,11 @@
         <!-- Python Specific -->
         {% if page.language == "python" %}
           <a href="{{ BASE_URL }}/python/offline/" class="js-splash--navigation-item">Use Offline</a>
-          <a href="{{ BASE_URL }}/ipython-notebooks/" class="js-splash--navigation-item">IPython Notebooks</a>
+          {% if ipython_notebooks_gallery %}  
+             <!-- not required -->
+          {% else %}
+            <a href="{{ BASE_URL }}/ipython-notebooks/" class="js-splash--navigation-item">IPython Notebooks</a>
+          {% endif %}
           <a href="{{ BASE_URL }}/pandas/" class="js-splash--navigation-item">Pandas</a>
         {% endif %}
 
@@ -124,16 +134,22 @@
 	{% if file_settings == true %}<a href="#file-settings" class="js-splash--navigation-item">File Settings</a> {% endif %}
 	{% if tutorial == true %}<a href="#tutorial" class="js-splash--navigation-item">Tutorial</a> {% endif %}
 	{% if get_request == true %}<a href="#static-image-export" class="js-splash--navigation-item">Image Export & Retrieving Plots</a> {% endif %}
-	{% if page.language == 'matlab' or page.language == 'python' or page.language == 'matplotlib' %}
-     <a href="#using-offline" class="js-splash--navigation-item">Use Offline</a>
-    {% endif %}
 
 	{% if dashboards %}
 	<!--override for dashboards index page -->
-	<a href="#industry" class="js-splash--navigation-item">By Industry</a>
-	<a href="#language" class="js-splash--navigation-item">By Data Science Language</a>
+	  <a href="#industry" class="js-splash--navigation-item">By Industry</a>
+	  <a href="#language" class="js-splash--navigation-item">By Data Science Language</a>
 	{% endif %}
 
+    {% if ipython_notebooks_gallery %}
+	<!--override for IPython Gallery  -->
+	  <a href="#notebook-basics" class="js-splash--navigation-item">Plotly Basics</a>
+	  <a href="#report-generation" class="js-splash--navigation-item">Report Generation</a>
+	  <a href="#connecting-to-databases" class="js-splash--navigation-item">Connecting to databases</a>
+	  <a href="#science-and-engineering" class="js-splash--navigation-item">Science and Engineering</a>
+	  <a href="#civic-data" class="js-splash--navigation-item">Civic Data</a>
+	  <a href="#finance" class="js-splash--navigation-item">Finance</a>
+	{% endif %}
 	</div>
 
 	<div class="js-splash--navigation-section-title">Community</div>
