Fixed sidebar to include 'Plotly Offline' in QUick Start

--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -98,8 +98,11 @@
 		{% endif %}
 
         <!-- Python Specific -->
+        {% if page.language == "python" or page.language == "matlab" or page.language == "r" %}
+          <a href="{{ BASE_URL }}/{{ page.language }/offline/" class="js-splash--navigation-item">Use Offline</a>
+        {% endif %}
+
         {% if page.language == "python" %}
-          <a href="{{ BASE_URL }}/python/offline/" class="js-splash--navigation-item">Use Offline</a>
           {% if ipython_notebooks_gallery %}  
              <!-- not required -->
           {% else %}
