--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -34,9 +34,11 @@
     <!-- sitemap -->
     {% include navigation-bar.html %}
 
-
 		<div class="allcontent">
-
+			
+			<!-- Go to www.addthis.com/dashboard to customize your tools -->
+			<div class="addthis_responsive_sharing"></div>
+			
 			<div class="sectionseparator_white">
 				<div class="container">
 
