--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -99,7 +99,7 @@
 
         <!-- Python Specific -->
         {% if page.language == "python" or page.language == "matlab" or page.language == "r" %}
-          <a href="{{ BASE_URL }}/{{ page.language }/offline/" class="js-splash--navigation-item">Use Offline</a>
+          <a href="{{ BASE_URL }}/{{ page.language }}/offline/" class="js-splash--navigation-item">Use Offline</a>
         {% endif %}
 
         {% if page.language == "python" %}
