Added R Github star link

--- a/_includes/lang-splash-banner.html
+++ b/_includes/lang-splash-banner.html
@@ -37,5 +37,7 @@
        <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.py&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
     {% elsif page.language == "python" %}
        <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.py&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+    {% elsif page.language == "r" %}
+       <iframe src="https://ghbtns.com/github-btn.html?user=ropensci&repo=plotly&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
     {% endif %}
 </div>
