Revert "python offline without jupyter"
This reverts commit 0a7e57f09cae0abc7bcbf6fa503314f9159dfd3f.

--- a/_includes/python-getting-started.html
+++ b/_includes/python-getting-started.html
@@ -27,36 +27,15 @@
         <h2 >Initialization</h2>
         <div class="content-box">
             <p>
-                Plotly for Python can be configured to render locally inside Jupyter (IPython) notebooks,
-                locally inside your web browser, or remotely in your online Plotly account.<br>
+                Plotly for Python can be configured to render locally inside Jupyter (IPython) notebooks
+                or remotely in your online Plotly account.<br>
                 Remote hosting on Plotly is free for public use. For private use, <a href="https://plot.ly/products/cloud">view our paid plans</a>.<br>
             </p>
 
             <h4>Offline Use</h4>
-            <p><b>Standalone HTML</b></p><br>
-            <p>Offline mode will save an HTML file locally and open it inside your web browser.</p><br>
+            <p>Offline mode only works inside Jupyter notebooks.</p>
             <pre><code class="python">import plotly
-print plotly.__version__  # version >1.9.4 required
-from plotly.graph_objs import Scatter, Layout
-plotly.offline.plot({
-    "data": [
-        Scatter(x=[1, 2, 3, 4], y=[4, 1, 3, 7])
-    ],
-    "layout": Layout(
-        title="hello world"
-    )
-})</code></pre>
-
-Learn more by calling help:
-
-<pre><code class="python">
-import plotly
-help(plotly.offline.plot)
-</code></pre><br>
-
-            <p><b>Inside Jupyter/IPython Notebooks</b></p><br>
-            <pre><code class="python">import plotly
-print plotly.__version__            # version 1.9.4 required
+print plotly.__version__            # version 1.9.x required
 plotly.offline.init_notebook_mode() # run at the start of every notebook
 plotly.offline.iplot({
     "data": [{
@@ -66,8 +45,7 @@ plotly.offline.iplot({
     "layout": {
         "title": "hello world"
     }
-})</code></pre><br/>
-
+})</code></pre>
             <p><a href="https://plot.ly/python/offline">Learn more about offline mode</a></p>
 
             <h4>Hosting on Plotly</h4>
