Updated CDN Link to include 'https'

--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -9,7 +9,7 @@
 
 	<body>
 	<div id="header" style="
-  background-image: url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
+  background-image: url('https://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
