--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -723,7 +723,7 @@ API SPLASH
 **************/
 
 .api-splash{
-  background-image:url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
+  background-image:url('https://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
