--- a/_includes/plotly_offline_cta.html
+++ b/_includes/plotly_offline_cta.html
@@ -1,5 +1,5 @@
 <div style="
-    background-image: url('http://images.plot.ly/background-images/grey-chart-background.png');
+    background-image: url('https://images.plot.ly/background-images/grey-chart-background.png');
     height: 200px;
     font-family: 'Open sans',verdana,arial,sans-serif;
     position: relative;">
