--- a/_layouts/getstart.html
+++ b/_layouts/getstart.html
@@ -3,7 +3,7 @@
 	{% include head.html %}
 	<body>
 	<div id="header" style="
-  background-image: url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
+  background-image: url('https://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
