sharing, not privacy

--- a/_includes/python-getting-started.html
+++ b/_includes/python-getting-started.html
@@ -85,7 +85,7 @@ py.plot({                      # use `py.iplot` inside the ipython notebook
         "title": "hello world"
     }
 }, filename='hello world',      # name of the file as saved in your plotly account
-   privacy='public')            # 'public' | 'private' | 'secret': Learn more: https://plot.ly/python/privacy</code></pre>
+   sharing='public')            # 'public' | 'private' | 'secret': Learn more: https://plot.ly/python/privacy</code></pre>
 
             <h4>Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h4>
 
